update fix bug thread